this is a gateway service with reactive programming to handle non blocking operations , still needs to be corrected though

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,23 +8,19 @@ spring:
     gateway:
       routes:
         - id: user-service
-          uri: http://localhost:8081
+          uri: http://localhost:8081/test
           predicates:
             - Path=/users/delayed-service
           filters:
             - StripPrefix=1
-            - name: DelayResponse
-              args:
-                delay: 3000 # Delay in milliseconds
+
 
         - id: order-service
-          uri: http://localhost:8082
+          uri: http://localhost:8082/test
           predicates:
             - Path=/orders/delayed-service
           filters:
             - StripPrefix=1
-            - name: DelayResponse
-              args:
-                delay: 3000 # Delay in milliseconds
+
 server:
   port: 8004
