--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,20 +3,25 @@ spring:
     name: gateway
   main:
     web-application-type: reactive
-
   cloud:
     gateway:
       routes:
+        - id: user-authentication
+          uri: http://localhost:8081/authentication
+          predicates:
+            - Path=/users/delayed-auth
+          filters:
+            - StripPrefix=1
+
         - id: user-service
-          uri: http://localhost:8081/test
+          uri: http://localhost:8081/services
           predicates:
             - Path=/users/delayed-service
           filters:
             - StripPrefix=1
 
-
         - id: order-service
-          uri: http://localhost:8082/test
+          uri: http://localhost:8082/orders
           predicates:
             - Path=/orders/delayed-service
           filters:
